[package]
name = "velor-api"
description = "Velor REST API"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
velor-api-types = { workspace = true }
velor-bcs-utils = { workspace = true }
velor-build-info = { workspace = true }
velor-config = { workspace = true }
velor-crypto = { workspace = true }
velor-gas-schedule = { workspace = true }
velor-global-constants = { workspace = true }
velor-logger = { workspace = true }
velor-mempool = { workspace = true }
velor-metrics-core = { workspace = true }
velor-runtimes = { workspace = true }
velor-sdk = { workspace = true }
velor-storage-interface = { workspace = true }
velor-types = { workspace = true }
velor-vm = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
mini-moka = { workspace = true }
move-core-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
velor-api-test-context = { workspace = true }
velor-cached-packages = { workspace = true }
velor-framework = { workspace = true }
velor-gas-meter = { workspace = true }
velor-gas-schedule = { workspace = true, features = ["testing"] }
velor-move-stdlib = { workspace = true }
velor-proptest-helpers = { workspace = true }
velor-transaction-filters = { workspace = true, features = ["fuzzing"] }
move-package = { workspace = true }
passkey-types = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["mime"]
